--- a/src/main/resources/static/consultants/index.html
+++ b/src/main/resources/static/consultants/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Users</title>
+  <title>Consultants</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="/main.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@7.0.0/bundles/stomp.umd.min.js"></script>
-  <script src="/stomp.js"></script>
+  <script src="/consultants/stomp.js"></script>
 </head>
 <body>
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
@@ -50,6 +50,8 @@
         <tbody id="chatroom-list">
         </tbody>
       </table>
+      <button id="prev" class="btn btn-default" disabled="disabled" type="button">Preve</button>
+      <button id="next" class="btn btn-default" disabled="disabled" type="button">Next</button>
     </div>
   </div>
   <div class="row">
